fixed hover on mobile

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body{
   border-radius: 10%;
   transition-duration: .5s;
 }
-.card:hover{
+.card:hover, .card:active{
   -webkit-tap-highlight-color:  rgba(255, 255, 255, 0); 
   transform: scale(1.05);
 	transition-property: transform;
